# toy_interview_fcgi_net_client

./: .gitmodules  CMakeLists.txt  README.md  build_docker_image.sh  run_on_docker.sh
3rd/: fcgicc-0.1.3.tar.bz2
3rd/network_manager_introspection_data/: nm-ip6-config.xml
deploy/: Dockerfile  build.sh  docker-compose.yml  nginx.conf
src/: .service.h.swp  CMakeLists.txt  main.cpp  service.h
src/backend/: network_client.h  network_manager_client.h
src/dto/: info.h
src/serialization/: info.h
tests/: CMakeLists.txt  nm_test.cpp  tests.cpp
tools/: generate_dbus_stubs.sh
